assets/style/style.css
/* General */
:root {
  --color-primary-light: #d5f9ba;
  --color-primary-dark: #009688;
  --color-secondary-light: #fafafa;
  --color-secondary-medium: #eaeaea;
  --color-secondary-dark: #d6dbd8;
  --color-tertiary: #f3eeea;
  --color-quaternary: #8edafc;
  --color-white: #ffffff;
  --color-black: #000000;

  --text-color-dark: #6b7376;
  --text-color-medium: #b1b1b1;
  --text-color-light: #c2c2c2;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Lato", sans-serif;
  color: var(--color-black);
  font-size: 0.85rem;
  line-height: 1.2rem;
  width: 100%;
  background: linear-gradient(
    to bottom,
    var(--color-primary-dark) 0%,
    var(--color-primary-dark) 15%,
    var(--color-secondary-dark) 15%,
    var(--color-secondary-dark) 100%
  );
}

ul {
  list-style: none;
}

img {
  width: 100%;
  height: 100%;
}

.photo {
  height: 50px;
  width: 50px;
  border-radius: 50%;
  overflow: hidden;
}

.photo img {
  object-fit: cover;
}

/* Utilities */
.container {
  width: 80vw;
  height: 95vh;
  margin: 2.5vh auto;
  display: flex;
}

.container-sm {
  padding: 8px 15px;
}

.text-sm {
  font-size: 0.7rem;
}

.text-xs {
  font-size: 0.5rem;
}

/* Scrollbar */
::-webkit-scrollbar {
  width: 15px;
}

::-webkit-scrollbar-track {
  background: var(--color-secondary-light);
}

::-webkit-scrollbar-thumb {
  border-radius: 6px;
  border-left: 3.5px solid var(--color-secondary-light);
  border-right: 3.5px solid var(--color-secondary-light);
  background-color: var(--text-color-medium);
}

/* MAIN - Left part*/
.left {
  width: 380px;
}

/* User */
.user {
  height: 70px;
  background-color: var(--color-secondary-medium);
  border-right: 1px solid var(--color-secondary-dark);
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.user .menu,
.chat-selected .menu {
  display: flex;
  justify-content: space-between;
}

.user .menu li,
.chat-selected .menu li {
  padding: 0 10px;
  font-size: 1.2rem;
  color: var(--text-color-medium);
}

/* Notification */
.notification {
  height: 78px;
  background-color: var(--color-quaternary);
  display: flex;
  align-items: center;
}

.notification i {
  height: 50px;
  width: 50px;
  line-height: 50px;
  border-radius: 50%;
  text-align: center;
  vertical-align: middle;
  background-color: var(--color-white);
  color: var(--color-quaternary);
  font-size: 1.2rem;
  margin-right: 15px;
}

.notification strong div:last-child {
  text-decoration: underline;
  color: var(--text-color-dark);
}

/* Searchbox */
.searchbox {
  height: 50px;
  background-color: var(--color-secondary-light);
  padding: 8px;
}

.searchbox .searchbar {
  background-color: var(--color-white);
  height: calc(50px - 16px);
  display: flex;
  align-items: center;
  padding: 5px 15px;
}

.searchbar i {
  color: var(--text-color-medium);
}

.searchbar input {
  border: none;
  width: 80%;
  padding-left: 15px;
  font-family: inherit;
}

.searchbar input::placeholder {
  color: var(--text-color-light);
}

/* Chat list */
.chat-list {
  overflow-y: scroll;
  height: calc(100% - 70px - 78px - 50px);
  background-color: var(--color-secondary-light);
}

.chat-list .chat-preview {
  height: 80px;
  background-color: var(--color-white);
  border-top: 0.8px solid var(--color-secondary-medium);
  border-right: 0.8px solid var(--color-secondary-medium);
  display: flex;
  align-items: center;
  position: relative;
}

.chat-preview .chat-textbox {
  padding-left: 15px;
}

.chat-preview .chat-text {
  color: var(--text-color-medium);
}

.chat-preview .chat-hour {
  color: var(--text-color-medium);
  position: absolute;
  top: 8px;
  right: 0px;
}

/* MAIN - Right part*/
.right {
  width: calc(100% - 380px);
}

.chat-selected,
.chat-input {
  height: 70px;
}

/* Chat selected */
.chat-selected {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--color-secondary-medium);
}

.chat-selected .chat-info {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.chat-selected .chat-info .photo {
  margin-right: 15px;
}

.chat-selected .last-access {
  color: var(--text-color-dark);
  font-weight: bold;
}

/* Chat */
.chat {
  overflow-y: scroll;
  height: calc(100% - 140px);
  padding: 50px 95px;
  background-image: url(../img/mine.jpg);
  display: flex;
  flex-direction: column;
}

.chat .msg {
  display: flex;
  justify-content: space-between;
  padding: 10px 10px 2px;
  margin-bottom: 10px;
  border-radius: 10px;
  width: 65%;
  height: fit-content;
}

.chat .msg.sent {
  background-color: var(--color-primary-light);
  align-self: end;
}

.chat .msg.received {
  background-color: var(--color-white);
}

.chat .msg .msg-hour {
  margin-top: 25px;
  color: var(--text-color-medium);
  text-align: right;
  position: relative;
  left: 18px;
}

.chat .msg i {
  color: var(--text-color-medium);
}

/* Chat input */
.chat-input {
  background-color: var(--color-tertiary);
  display: flex;
  align-items: center;
  justify-content: space-evenly;
}

.chat-input i {
  color: var(--text-color-dark);
  font-size: 1.5rem;
  padding: 0 20px;
}

.chat-input input {
  border: none;
  border-radius: 10px;
  height: 50px;
  width: 100%;
  font-family: inherit;
  padding-left: 15px;
}

.chat-input input::placeholder {
  color: var(--text-color-light);
}

/* ---- RESPONSIVE ---- */
/* Tablet: from 542 to 992 */
@media screen and (max-width: 992px) {
  .container {
    width: 100%;
    height: 100vh;
    margin: 0 auto;
  }

  /* Left part*/
  .left {
    width: 90px;
  }

  .user .menu-box {
    display: none;
  }

  .notification,
  .searchbox {
    display: none;
  }

  .chat-list {
    height: calc(100% - 70px);
  }

  .chat-list .chat-textbox {
    display: none;
  }

  /* Right part*/
  .right {
    width: calc(100% - 90px);
  }

  .chat {
    padding: 45px;
  }
}

/* Phone: < 542 */
@media screen and (max-width: 541px) {
  .left {
    display: none;
  }

  /* Right part*/
  .right {
    width: 100%;
  }

  .chat-selected .menu-box {
    display: none;
  }

  .chat {
    padding: 20px;
  }

  .chat-input i {
    display: none;
  }

  .chat-input input {
    margin: 0 20px;
  }
}

